chore(monorepo): complete initial monorepo setup, all DOD met

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -4,7 +4,13 @@
   "private": true,
   "files": [
     "base.json",
-    "react.json",
-    "node.json"
-  ]
+    "react-library.json",
+    "nextjs.json",
+    "vite.json"
+  ],
+  "devDependencies": {
+    "eslint": "^8.0.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.0.0"
+  }
 }
