--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "eslint": "^8.0.0",
-    "prettier": "^3.0.0",
     "@starter/eslint-config": "workspace:*",
+    "@types/node": "^20.0.0",
+    "eslint": "^8.0.0",
+    "eslint-import-resolver-typescript": "^4.4.2",
+    "eslint-plugin-import": "^2.31.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.0"
+    "lint-staged": "^16.1.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
