--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "main": "index.js",
   "files": [
-    "index.js",
-    "react.js",
-    "node.js"
+    "index.js"
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.0.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.0.0"
   },
   "peerDependencies": {
     "eslint": "^8.0.0",
