--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.17.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.0.0",
     "react-router-dom": "^6.22.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
