--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
 # Testing
 coverage
@@ -39,4 +40,7 @@ coverage
 .cache
 .temp
 .tmp
-*.log 
+*.log
+
+# Cursor
+.cursor/rules 
