--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,15 +11,23 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.79.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^6.0.0",
     "react-router-dom": "^6.22.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query-devtools": "^5.79.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
