--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.79.2",
     "class-variance-authority": "^0.7.1",
@@ -20,13 +22,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^6.0.0",
+    "react-hook-form": "^7.57.0",
     "react-router-dom": "^6.22.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.1"
+    "zod": "^3.25.48"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
