--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../packages/tsconfig/react.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "types": ["@testing-library/jest-dom"],
     "paths": {
       "@/*": ["src/*"]
     }
