--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^3.2.1",
     "autoprefixer": "^10.4.17",
     "jsdom": "^26.1.0",
     "postcss": "^8.4.35",
