fix: update typecheck configuration for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: pnpm install
 
       - name: Type check
-        run: pnpm typecheck
+        run: pnpm --filter @starter/web typecheck
 
       - name: Lint
         run: pnpm lint
