--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,14 @@ jobs:
         run: pnpm lint
 
       - name: Test
-        run: pnpm test 
+        run: pnpm test
+
+      - name: Test Coverage
+        run: pnpm --filter @starter/web test:coverage
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          directory: ./apps/web/coverage/
+          fail_ci_if_error: true 
+          token: ${{ secrets.CODECOV_TOKEN }}
