--- a/.gitignore
+++ b/.gitignore
@@ -12,15 +12,26 @@ out
 .env
 .env.local
 .env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE and editor files
 .idea
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
 *.swp
 *.swo
 .DS_Store
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
 # Debug logs
 npm-debug.log*
@@ -41,6 +52,11 @@ coverage
 .temp
 .tmp
 *.log
+pids
+*.pid
+*.seed
+*.pid.lock
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Cursor
 .cursor/rules 
