--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pnpm": ">=8.0.0"
   },
   "scripts": {
-    "dev": "pnpm -r dev",
+    "dev": "pnpm dlx concurrently \"pnpm --filter web dev\" \"pnpm --filter api start:dev\"",
     "build": "pnpm -r build",
     "lint": "pnpm -r lint",
     "test": "pnpm -r test",
