feat(ci): implement Codecov integration for coverage reporting

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "pnpm -r build",
     "lint": "pnpm -r lint",
     "test": "pnpm -r test",
+    "test:coverage": "pnpm -r test:coverage",
     "clean": "pnpm -r clean",
     "prepare": "husky",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
