--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: pnpm install
 
       - name: Type check
-        run: pnpm --filter @starter/web typecheck
+        run: pnpm typecheck
 
       - name: Lint
         run: pnpm lint
@@ -50,11 +50,11 @@ jobs:
         run: pnpm test
 
       - name: Test Coverage
-        run: pnpm --filter @starter/web test:coverage
+        run: pnpm test:coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
-          directory: ./apps/web/coverage/
-          fail_ci_if_error: true 
+          directory: ./apps
+          fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
