--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^9.0.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^4.4.2",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^14.0.0",
