feat(prisma): expand Prisma commands in package.json for enhanced database management
- Added various Prisma commands to streamline database operations, including migration, seeding, and formatting.
- Introduced a comprehensive `db:reset` command to facilitate development resets, ensuring a smoother workflow.
- This update significantly improves the developer experience by providing essential tools directly in the package.json for efficient database handling.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,17 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typecheck": "tsc --noEmit",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:reset": "prisma migrate reset",
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:seed": "prisma db seed",
+    "prisma:format": "prisma format",
+    "prisma:validate": "prisma validate",
+    "db:reset": "prisma migrate reset --force && prisma generate && prisma db seed",
+    "db:push": "prisma db push --accept-data-loss"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
