chore(ci): refine CI workflow and clean up test files
- Updated the CI workflow to specify the working directory for generating the Prisma client, enhancing clarity and reducing potential errors.
- Removed unnecessary blank lines in user controller and service test files for cleaner code and improved readability.
- These adjustments streamline the CI process and maintain a tidy codebase, making it easier for developers to navigate and contribute.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
         run: pnpm install
 
       - name: Generate Prisma Client
-        run: cd apps/api && pnpm prisma generate
+        working-directory: apps/api
+        run: pnpm prisma generate
 
       - name: Type check
         run: pnpm typecheck
