Feat/4 back end setup (#3)
* feat(docs): introduce comprehensive backend setup guide for NestJS and PostgreSQL

* feat(api): establish a robust NestJS backend structure with essential configurations

* feat(ci): implement Codecov integration for coverage reporting

* feat(deps): add Prisma 6.9.0 and update package configurations

- Introduced `@prisma/client` and `prisma` at version 6.9.0 in `package.json` for enhanced database interactions.
- Updated `pnpm-lock.yaml` to reflect new Prisma dependencies and their configurations.
- Marked backend setup tasks as complete in documentation, ensuring clarity on project setup steps.

* feat(api): enhance ESLint and Prettier integration, add Prisma modules, and refine NestJS structure

- Integrated Prettier with ESLint for consistent code formatting across the project.
- Updated `eslint.config.js` and `package.json` to include necessary plugins and configurations.
- Introduced Prisma modules and services for improved database handling, along with a custom exception filter for better error management.
- Refined the NestJS application structure by adding user management features and enhancing the main application module.
- Added VSCode settings for automatic formatting and linting on save, ensuring a smoother development experience.
- Removed outdated Prettier configuration file to streamline project setup.

* test: add comprehensive test coverage for users and prisma modules

- Add tests for PrismaService lifecycle methods

- Add tests for PrismaExceptionFilter error handling

- Add tests for UsersController CRUD operations

- Add tests for UsersService CRUD operations

- Update backend setup documentation with completed tasks

* test(users): fix validation pipe testing using supertest - Replace direct controller method calls with HTTP requests - Add proper typing for Express app - Remove unused BadRequestException import - Ensure validation happens before service calls

* refactor(prisma): remove outdated PrismaService test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Generate Prisma Client
+        working-directory: apps/api
+        run: pnpm prisma generate
+
       - name: Type check
-        run: pnpm --filter @starter/web typecheck
+        run: pnpm typecheck
 
       - name: Lint
         run: pnpm lint
@@ -50,11 +54,11 @@ jobs:
         run: pnpm test
 
       - name: Test Coverage
-        run: pnpm --filter @starter/web test:coverage
+        run: pnpm test:coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
-          directory: ./apps/web/coverage/
-          fail_ci_if_error: true 
+          directory: ./apps
+          fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
