refactor(render): streamline build command for nestjs-api service
- Updated the build command in `render.yaml` to improve clarity and organization.
- Split the command into multiple lines for better readability, ensuring that `pnpm install` runs without the frozen lockfile option and the build process is executed from the correct directory.
- This change enhances the maintainability of the configuration and aligns with best practices for service setup.

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,10 @@ services:
   - type: web
     name: nestjs-api
     env: node
-    buildCommand: pnpm install && pnpm build
+    buildCommand: |
+      pnpm install --no-frozen-lockfile
+      cd apps/api
+      pnpm build
     startCommand: cd apps/api && pnpm start:prod
     envVars:
       - key: NODE_ENV
