--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,8 @@ services:
   - type: web
     name: nestjs-api
     env: node
-    buildCommand: |
-      pnpm install --no-frozen-lockfile
-      cd apps/api
-      pnpm build
-    startCommand: cd apps/api && pnpm start:prod
+    buildCommand: cd apps/api && pnpm deploy:build
+    startCommand: cd apps/api && pnpm deploy:start
     envVars:
       - key: NODE_ENV
         value: production
