refactor(render): enhance build process for nestjs-api service
- Updated the `buildCommand` in `render.yaml` to include a separate installation step, improving clarity and ensuring dependencies are installed before building.
- Modified the `deploy:build` script in `package.json` to prefix commands with `pnpm`, ensuring consistency in package management.
- These changes streamline the build process, making it more robust and user-friendly for developers.

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,9 @@ services:
   - type: web
     name: nestjs-api
     env: node
-    buildCommand: cd apps/api && pnpm deploy:build
+    buildCommand: |
+      pnpm install --no-frozen-lockfile
+      cd apps/api && pnpm deploy:build
     startCommand: cd apps/api && pnpm deploy:start
     envVars:
       - key: NODE_ENV
