refactor(render): consolidate build command for nestjs-api service
- Merged multiple build steps into a single command in `render.yaml`, enhancing efficiency and reducing complexity.
- Removed the `deploy:build` script from `package.json`, as its functionality is now integrated into the build command.
- These changes streamline the build process, making it more straightforward for developers to deploy the NestJS API.

--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,7 @@ services:
   - type: web
     name: nestjs-api
     env: node
-    buildCommand: |
-      pnpm install --no-frozen-lockfile
-      cd apps/api && pnpm deploy:build
+    buildCommand: pnpm install --no-frozen-lockfile && cd apps/api && pnpm prisma generate && pnpm prisma migrate deploy && pnpm nest build --webpack && ls -la dist
     startCommand: cd apps/api && pnpm deploy:start
     envVars:
       - key: NODE_ENV
