--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,8 +1,7 @@
 {
   "rewrites": [
-    {
-      "source": "^/(?:(?!api/|_next/|\\..).*)$",
-      "destination": "/"
-    }
+    { "source": "/api/:match*", "destination": "/api/:match*" },
+    { "source": "/_next/:match*", "destination": "/_next/:match*" },
+    { "source": "/:path*", "destination": "/" }
   ]
 }
