chore(tests): clean up and enhance test structure - Removed obsolete hooks tests to streamline the test suite. - Updated test mocks for improved clarity and maintainability. - Adjusted test configurations to ignore specific paths, ensuring a more focused testing environment.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -96,7 +96,11 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/apps/web/"
+    ]
   },
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
