--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -46,6 +46,7 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
+    "nestjs-pino": "^4.4.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
@@ -70,6 +71,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.4.2",
     "prisma": "^6.9.0",
     "source-map-support": "^0.5.21",
