Refactor TypeScript configuration and enhance email documentation
- Cleaned up `tsconfig.json` files by removing unused paths and adding necessary compiler options for better TypeScript support.
- Updated email confirmation and password reset documentation to reflect the transition from SendGrid's API to using `@nestjs-modules/mailer` with SMTP, ensuring clarity in setup and implementation steps.
- Removed deprecated environment variable handling and streamlined email service setup for improved maintainability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
     "emitDecoratorMetadata": true,
     "baseUrl": ".",
     "paths": {
-      "@apps/*": ["./apps/*"],
-      "@packages/*": ["./packages/*"]
+      "@apps/*": ["./apps/*"]
     }
   },
   "exclude": ["node_modules", ".eslintrc.cjs"]
