--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: nestjs-api
     env: node
-    buildCommand: pnpm install --no-frozen-lockfile && cd apps/api && pnpm prisma generate && pnpm prisma migrate deploy && pnpm nest build --webpack && ls -la dist
+    buildCommand: pnpm install --no-frozen-lockfile && cd apps/api && pnpm prisma generate && pnpm prisma migrate deploy && pnpm nest build --webpack && mkdir -p dist/ && cp -R src/email/templates dist/templates && ls -la dist/templates && ls -la dist
     startCommand: cd apps/api && pnpm deploy:start
     envVars:
       - key: NODE_ENV
