--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,6 +45,7 @@
     "@tanstack/react-query-devtools": "^5.79.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.6",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
