--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
     "@hookform/resolvers": "^5.1.0",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.79.2",
@@ -43,6 +45,7 @@
     "@tanstack/react-query-devtools": "^5.79.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.6",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
