--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "prettier": "^3.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.0"
   },
   "lint-staged": {
