feat(cloudinary): integrate Cloudinary for image uploads and management

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -14,3 +14,8 @@ JWT_REFRESH_EXPIRES_IN=
 
 # Frontend
 VITE_API_URL=http://localhost:3000
+
+# Cloudinary
+  CLOUDINARY_CLOUD_NAME=
+  CLOUDINARY_API_KEY=
+  CLOUDINARY_API_SECRET=
