--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -50,6 +50,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "joi": "^17.13.3",
@@ -70,8 +71,9 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.2",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
