--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -41,7 +41,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.3",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
@@ -54,6 +54,7 @@
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "joi": "^17.13.3",
+    "multer": "^2.0.1",
     "nestjs-pino": "^4.4.0",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
