--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,6 +3,9 @@ NODE_ENV=development
 PORT=3000
 CORS_ORIGIN="localhost or your front-end domain on prod"
 
+#Project
+PROJECT_NAME=
+
 # Database
 DATABASE_URL=""
 
