Feat/user avatar (#29)
* update doc

* feat(cloudinary): integrate Cloudinary for image uploads and management

* feat(cloudinary): enhance error handling and logging with Cloudinary exceptions

* WIP tests cloudinary service pass

* refactor(tests): streamline CloudinaryService tests with dynamic config setup

* chore(docs): mark Cloudinary setup and service implementation as complete

* feat(user): add avatarUrl field with default value and make it required

* feat(cloudinary): enhance uploadImage method with file validation and error handling

Added robust file type and size validation to the uploadImage method in CloudinaryService,

* refactor(tests): fix user test with avatar and fix findone signature

* feat(users): implement avatar upload endpoint

* test(users): add unit tests for avatar upload functionality

* test(messages): add unit tests to ensure consistency between language files

* feat(cloudinary): introduce PROJECT_NAME configuration for dynamic folder structure

* fix(cloudinary): improve error handling in image upload and delete methods

* fix(users): ensure temporary file cleanup after image upload

* fix(cloudinary): ensure temporary file cleanup after upload failure

* feat(validation): add PROJECT_NAME to validation schema for enhanced configuration

* fix(validation): set default value for PROJECT_NAME in validation schema

* docs(cloudinary): details of avatar cleanup strategy to reduce storage costs and enhance security

* feat(cloudinary): enhance uploadImage method to include userId for deterministic avatar filenames

* test(cloudinary, users): update tests to pass userId for image uploads, ensuring consistent avatar filename generation

* docs(api): introduce comprehensive file error responses and streamline health check endpoint

* fix test

* feat(profile): introduce avatar upload functionality with preview and validation for file size

* feat(users): implement avatar upload API and hook, enhancing user profile functionality

* feat(i1

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,6 +3,9 @@ NODE_ENV=development
 PORT=3000
 CORS_ORIGIN="localhost or your front-end domain on prod"
 
+#Project
+PROJECT_NAME=
+
 # Database
 DATABASE_URL=""
 
@@ -14,3 +17,8 @@ JWT_REFRESH_EXPIRES_IN=
 
 # Frontend
 VITE_API_URL=http://localhost:3000
+
+# Cloudinary
+  CLOUDINARY_CLOUD_NAME=
+  CLOUDINARY_API_KEY=
+  CLOUDINARY_API_SECRET=
