--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -51,6 +51,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.6.1",
+    "cloudinary-build-url": "^0.2.4",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "joi": "^17.13.3",
