--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -19,6 +19,11 @@ JWT_REFRESH_EXPIRES_IN=
 VITE_API_URL=http://localhost:3000
 
 # Cloudinary
-  CLOUDINARY_CLOUD_NAME=
-  CLOUDINARY_API_KEY=
-  CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
+#GOOGLE OAUTH
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
