--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.79.2",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.57.0",
+    "react-icons": "^5.5.0",
     "react-intl": "^7.1.11",
     "react-router-dom": "^6.22.0",
     "sonner": "^2.0.5",
