Refactor build scripts in package.json: update asset copying and streamline production start command

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,14 +6,16 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build && pnpm run copy-templates",
+    "build": "nest build && pnpm run copy-assets",
+    "copy-assets": "pnpm run copy-templates && pnpm run copy-errors",
     "copy-templates": "cp -R src/email/templates dist/src/email/templates",
+    "copy-errors": "cp -R src/errors/messages dist/src/errors/messages",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "deploy:start": "node dist/main",
+    "start:prod": "node dist/src/main",
+    "deploy:start": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
